hive-macro/tests/macro/hive_test/should_fail/function_argument_type.rs
#[hive_macro::hive_test]
fn test_function(test_channel: &mut String, handle: String, info: String, define: String) {}

fn main() {}
